--- a/locales/ru.json
+++ b/locales/ru.json
@@ -197,8 +197,8 @@
     "catalog-text-kondi4": "Заправка фрионом",
     "catalog-text-kondi5": "Антибактериальная обработка дифлекторов",
     "hero-title-price": "Прайс-лист автосервиса «КАСКАД»",
-    "price-content-1": "Представляем вашему вниманию актуальный прайс-лист автосервиса «АС КАСКАД» в Павлограде. Наша станция технического обслуживания более 20 лет специализируется на полном спектре услуг по ремонту и обслуживанию автомобилей всех марок – от легковых до коммерческих. Мы выполняем профессиональную компьютерную диагностику, техническое обслуживание, замену масел и фильтров, ремонт ходовой части и тормозной системы, установку и сервисное обслуживание ГБО, а также ремонт и заправку автомобильных кондиционеров.",
-    "price-content-2": "Здесь вы найдете основные услуги по диагностике авто, техническому обслуживанию, ремонту двигателя, подвески, тормозной системы и установке газобаллонного оборудования. Если нужной услуги нет в списке – просто позвоните нам по телефонам +38 (066) 837 56 66 или +38 (096) 211 02 10. Менеджеры автосервиса «АС КАСКАД» всегда готовы предоставить профессиональную консультацию, ответить на все ваши вопросы и предложить оптимальное решение для любого автомобиля.",
+    "price-content-11": "Представляем вашему вниманию актуальный прайс-лист автосервиса «АС КАСКАД» в Павлограде. Наша станция технического обслуживания более 20 лет специализируется на полном спектре услуг по ремонту и обслуживанию автомобилей всех марок – от легковых до коммерческих. Мы выполняем профессиональную компьютерную диагностику, техническое обслуживание, замену масел и фильтров, ремонт ходовой части и тормозной системы, установку и сервисное обслуживание ГБО, а также ремонт и заправку автомобильных кондиционеров.",
+    "price-content-22": "Здесь вы найдете основные услуги по диагностике авто, техническому обслуживанию, ремонту двигателя, подвески, тормозной системы и установке газобаллонного оборудования. Если нужной услуги нет в списке – просто позвоните нам по телефонам +38 (066) 837 56 66 или +38 (096) 211 02 10. Менеджеры автосервиса «АС КАСКАД» всегда готовы предоставить профессиональную консультацию, ответить на все ваши вопросы и предложить оптимальное решение для любого автомобиля.",
     "work-title": "Процесс работы",
     "work-subtitle": "Техническое обслуживание и ремонт автомобилей, проведение диагностики",
     "work-card1": "Двигатель",
@@ -219,5 +219,108 @@
     "work-card-content7": "Обслуживаем все европейские, азиатские и американские автомобили. Специализируемся на VAG, BMW, Mercedes, Toyota, Hyundai-Kia.",
     "work-card-content8": "Компьютерная диагностика, проверка двигателя, ходовой, электросистемы. Выявление неисправностей с помощью профессионального оборудования.",
     "work-card-content9": "Оптимизация работы двигателя, увеличение мощности, экономия топлива. Программная настройка ЭБУ для улучшения характеристик авто.",
-    "hero-title-contacts": "РАБОТАЕМ В ПАВЛОГРАДЕ БОЛЕЕ 20 ЛЕТ" 
+    "hero-title-contacts": "РАБОТАЕМ В ПАВЛОГРАДЕ БОЛЕЕ 20 ЛЕТ",
+    "hero-title-condi": "РЕМОНТ, ЗАПРАВКА И ОБСЛУЖИВАНИЕ КОНДИЦИОНЕРОВ",
+    "hero-content-condi1": "Комплексная диагностика.",
+    "hero-content-condi2": "Заправка автокондиционера.",
+    "hero-content-condi3": "Замена компрессора кондиционера.",
+    "condi-section-title": "Ремонт и заправка автокондиционеров в Павлограде",
+    "condi-span1": "Вернем холод в ваш автомобиль! В СТО «КАСКАД»",
+    "condi-span2": "проводим полную диагностику, ремонт и заправку систем кондиционирования любой сложности. Используем профессиональное оборудование и качественные хладагенты, чтобы обеспечить эффективную работу автокондиционера даже в самую жаркую погоду.",
+    "condi-title-price": "Прайс лист автокондиционера в Павлограде:",
+    "diagnostics-section-title": "Профессиональная диагностика автомобилей",
+    "hero-title-diagnostics": "Компьютерная диагностика автомобиля",
+    "hero-content-diagnostics1": "Компьютерная диагностика двигателя.",
+    "hero-content-diagnostics2": "Диагностика электронных систем.",
+    "hero-content-diagnostics3": "Диагностика АКПП.",
+    "diagnostics-span": "Выявим скрытые неисправности до их превращения в серьезные поломки!",
+    "diagnostics-span2": "В автосервисе «Каскад» проводим полную компьютерную диагностику всех систем автомобиля с использованием профессионального сканирующего оборудования. Современная диагностика позволяет точно определить причины неисправностей, сэкономив ваше время и деньги на ремонте.",
+    "diagnostics-list1": "Замена моторного масла и фильтров.",
+    "diagnostics-list2": "Проверка и замена технических жидкостей.",
+    "diagnostics-list3": "Проверка системы зажигания.",
+    "diagnostics-list4": "Осмотр рулевого управления.",
+    "diagnostics-list5": "Контроль состояния ремней и цепей ГРМ.",
+    "condi-list1": "Чистка и дезинфекция системы кондиционирования.",
+    "condi-list2": "Ремонт радиатора (конденсера) кондиционера.",
+    "condi-list3": "Замена ресивера-осушителя и расширительного клапана.",
+    "condi-list4": "Устранение утечек в магистралях.",
+    "condi-list5": "Замена масла в КПП и редукторах.",
+    "hero-title-tehnical": "ТЕХНИЧЕСКОЕ ОБСЛУЖИВАНИЕ АВТО",
+    "hero-content-tehnical1": "Диагностика ходовой части.",
+    "hero-content-tehnical2": "Проверка тормозной системы.",
+    "hero-content-tehnical3": "Диагностика электрооборудования.",
+    "tehnical-section-title": "Регламентное ТО автомобилей",
+    "tehnical-span": "Регулярное ТО - залог долгой и беспроблемной эксплуатации вашего автомобиля!",
+    "tehnical-span2": "В нашем автосервисе мы проводим полное техническое обслуживание с использованием профессионального оборудования и качественных материалов.",
+    "tehnical-list1": "Замена моторного масла и фильтров.",
+    "tehnical-list2": "Проверка и замена технических жидкостей.",
+    "tehnical-list3": "Проверка системы зажигания.",
+    "tehnical-list4": "Осмотр рулевого управления.",
+    "tehnical-list5": "Контроль состояния ремней и цепей ГРМ.",
+    "tehnical-price-title": "Прайс лист на техническое обслуживание в Павлограде СТО «Каскад»:",
+    "hero-title-transmissiya": "РЕМОНТ ТРАНСМИССИИ В ПАВЛОГРАДЕ",
+    "hero-content-transmissiya1": "Диагностика трансмиссии.",
+    "hero-content-transmissiya2": "Замена сцепления.",
+    "hero-content-transmissiya3": "Ремонт коробки передач.",
+    "transmissiya-section-title": "Ремонт трансмиссии автосервис в Павлограде",
+    "transmissiya-span": "Надежная трансмиссия – залог плавной и безопасной езды! В СТО «Каскад»",
+    "transmissiya-span2": "выполняем полную диагностику и ремонт трансмиссии любой сложности. Мы используем профессиональное оборудование и оригинальные запчасти, чтобы вернуть вашему авто уверенность на дороге.",
+    "transmissiya-list1": "Замена ШРУСов и пыльников.",
+    "transmissiya-list2": "Ремонт раздаточной коробки и редукторов.",
+    "transmissiya-list3": "Ремонт суппортов, замена направляющих и поршней.",
+    "transmissiya-list4": "Обслуживание карданного вала.",
+    "transmissiya-list5": "Замена масла в КПП и редукторах.",
+    "transmissiya-price-title": "Прайс лист на ремонт системы сцепления в Павлограде СТО «Каскад»:",
+    "hero-title-tormoznaya": "РЕМОНТ ТОРМОЗНОЙ СИСТЕМЫ",
+    "hero-content-tormoznaya1": "Проверка и замена ABS-датчиков.",
+    "hero-content-tormoznaya2": "Замена тормозных колодок и дисков.",
+    "hero-content-tormoznaya3": "Ремонт суппортов и замена цилиндров.",
+    "tormoznaya-section-title": "Ремонт тормозной системы автосервис в Павлограде",
+    "tormoznaya-span": "Ваша безопасность на дороге начинается с исправной тормозной системы! В нашем СТО «Каскад»",
+    "tormoznaya-span2": "мы проводим полную диагностику и ремонт тормозов любой сложности. Наши мастера используют профессиональное оборудование и качественные запчасти, чтобы обеспечить надежную работу тормозов вашего авто.",
+    "tormoznaya-list1": "Диагностика тормозной системы.",
+    "tormoznaya-list2": "Замена тормозных колодок, дисков и барабанов.",
+    "tormoznaya-list3": "Ремонт суппортов, замена направляющих и поршней.",
+    "tormoznaya-list4": "Прокачка тормозной системы, замена тормозной жидкости.",
+    "tormoznaya-list5": "Ремонт или замена тормозных цилиндров.",
+    "tormoznaya-title-price": "Прайс лист на ремонт тормозной системы в Павлограде СТО «Каскад»:",
+    "hero-title-electrika": "РЕМОНТ АВТОЭЛЕКТРИКИ В ПАВЛОГРАДЕ",
+    "hero-content-electrika1": "Ремонт и замена блоков управления.",
+    "hero-content-electrika2": "Диагностика генератора и стартера.",
+    "hero-content-electrika3": "Устранение проблем с проводкой.",
+    "electrika-section-title": "Диагностика и ремонт автоэлектрики",
+    "electrika-span": "В нашем СТО «Каскад»",
+    "electrika-span2": "в Павлограде вы можете провести полную диагностику и ремонт автоэлектрики любой сложности. Мы выполняем поиск и устранение неисправностей проводки, ремонт генераторов и стартеров, замену и установку освещения, а также любые электромонтажные работы. Используем только качественные запчасти и профессиональное оборудование. Обращаясь к нам, вы получаете гарантию на все виды услуг и уверенность в надёжной работе электрики вашего авто.",
+    "electrika-list1": "Диагностика электропроводки и устранение замыканий.",
+    "electrika-list2": "Ремонт и замена генераторов и стартеров.",
+    "electrika-list3": "Поиск и устранение ошибок блоков управления.",
+    "electrika-list4": "Установка и подключение фар, противотуманок, ДХО.",
+    "electrika-list5": "Проверка и замена аккумуляторов и реле.",
+    "electrika-title-price": "Прайс лист на ремонт автоэлектрики в Павлограде СТО «Каскад»:",
+    "hero-title-hodovaya": "РЕМОНТ ХОДОВОЙ В ПАВЛОГРАДЕ",
+    "hero-content-hodovaya1": "Диагностика и восстановление подвески!",
+    "hero-content-hodovaya2": "Быстрая замена амортизаторов и рычагов!",
+    "hero-content-hodovaya3": "Гарантия качества на все работы!",
+    "hodovaya-section-title": "Ремонт ходовой на «АС КАСКАД»",
+    "hodovaya-span": "В нашем СТО «КАСКАД»",
+    "hodovaya-span2": "в Павлограде вы можете провести полную диагностику и ремонт ходовой части автомобиля. Мы выполняем замену амортизаторов, рычагов, шаровых опор, сайлентблоков, ступичных подшипников и другие работы. Используем только качественные запчасти и профессиональное оборудование. Обращаясь к нам, вы получаете гарантию на все виды услуг и уверенность в безопасности своего авто.",
+    "hodovaya-list1": "Диагностика подвески и выявление неисправностей.",
+    "hodovaya-list2": "Замена амортизаторов и стоек стабилизатора.",
+    "hodovaya-list3": "Замена рычагов, шаровых опор и втулок.",
+    "hodovaya-list4": "Замена ступичных подшипников.",
+    "hodovaya-list5": "Проверка и регулировка развал-схождения.",
+    "hodovaya-title-price": "Прайс лист на ремонт ходовой части в Павлограде СТО «Каскад»:",
+    "hero-title-dvigatel": "РЕМОНТ ДВИГАТЕЛЯ В ПАВЛОГРАДЕ",
+    "hero-content-dvigatel1": "Диагностика, ремонт и обслуживание!",
+    "hero-content-dvigatel2": "Работаем с любыми марками и моделями!",
+    "hero-content-dvigatel3": "Используем качественные запчасти!",
+    "dvigatel-section-title": "Ремонт двигателя на «АС КАСКАД»",
+    "dvigatel-span": "В нашем СТО «КАСКАД»",
+    "dvigatel-span2": "вы можете провести полную диагностику и ремонт двигателя любой сложности. Мы выполняем капитальный ремонт, замену ГРМ, ремонт головки блока цилиндров, замену поршневых колец, прокладок, маслосъёмных колпачков и другие работы. Используем только качественные запчасти и профессиональное оборудование. Обращаясь к нам, вы получаете гарантию на все виды услуг и уверенность в надежной работе двигателя вашего авто.",
+    "dvigatel-title-price": "Прайс лист на ремонт двигателя в Павлограде СТО «Каскад»:",
+    "dvigatel-list1": "Проверка ошибок, компрессии, состояния цилиндров.",
+    "dvigatel-list2": "Замена поршневой группы, вкладышей, прокладок.",
+    "dvigatel-list3": "Замена масла в двигателе.",
+    "dvigatel-list4": "Чистка, замена картриджа, восстановление.",
+    "dvigatel-list5": "Устранение перебоев в работе, улучшение запуска"
   }
