--- a/locales/uk.json
+++ b/locales/uk.json
@@ -197,8 +197,8 @@
     "catalog-text-kondi4": "Заправка фріоном",
     "catalog-text-kondi5": "Антибактеріальна обробка дифлекторів",
     "hero-title-price": "Прайс-лист автосервісу «КАСКАД»",
-    "price-content-1": "Представляємо вашій увазі актуальний прайс-лист автосервісу «АС КАСКАД» у Павлограді. Наша станція технічного обслуговування понад 20 років спеціалізується на повному спектрі послуг з ремонту та обслуговування автомобілів усіх марок – від легкових до комерційних. Ми виконуємо якісну комп'ютерну діагностику, професійне технічне обслуговування, заміну мастил, ремонт ходової, гальмівної системи, встановлення та сервісне обслуговування ГБО, а також ремонт та заправку автокондиціонерів.",
-    "price-content-2": "Тут ви знайдете основні послуги з діагностики автомобіля, технічного обслуговування, ремонту двигуна, підвіски, гальмівної системи та встановлення газобалонного обладнання. Якщо потрібної послуги немає у списку – просто зателефонуйте нам за телефонами +38 (066) 837 56 66 або +38 (096) 211 02 10. Менеджери автосервісу «АС КАСКАД» завжди готові надати професійну консультацію, відповісти на ваші запитання та запропонувати оптимальне рішення для будь-якої марки та моделі автомобіля.",
+    "price-content-11": "Пропонуємо до Вашої уваги актуальний прайс-лист автосервісу «АС КАСКАД» у Павлограді. Наша станція технічного обслуговування понад 20 років спеціалізується на повному спектрі послуг з ремонту та обслуговування автомобілів усіх марок – від легкових до комерційних. Ми виконуємо якісну комп'ютерну діагностику, професійне технічне обслуговування, заміну мастил, ремонт ходової, гальмівної системи, встановлення та сервісне обслуговування ГБО, а також ремонт та заправку автокондиціонерів.",
+    "price-content-22": "Тут ви знайдете основні послуги з діагностики автомобіля, технічного обслуговування, ремонту двигуна, підвіски, гальмівної системи та встановлення газобалонного обладнання. Якщо потрібної послуги немає у списку – просто зателефонуйте нам за телефонами +38 (066) 837 56 66 або +38 (096) 211 02 10. Менеджери автосервісу «АС КАСКАД» завжди готові надати професійну консультацію, відповісти на ваші запитання та запропонувати оптимальне рішення для будь-якої марки та моделі автомобіля.",
     "work-title": "Процес роботи",
     "work-subtitle": "Технічне обслуговування та ремонт автомобілів, проведення діагностики",
     "work-card1": "Двигун",
@@ -219,5 +219,108 @@
     "work-card-content7": "Обслуговуємо всі європейські, азіатські та американські автомобілі. Спеціалізуємося на VAG, BMW, Mercedes, Toyota, Hyundai-Kia.",
     "work-card-content8": "Комп'ютерна діагностика, перевірка двигуна, ходової, електросистем. Виявлення несправностей за допомогою професійного обладнання.",
     "work-card-content9": "Оптимізація роботи двигуна, збільшення потужності, економія палива. Програмне налаштування ЕБУ для покращення характеристик авто.",
-    "hero-title-contacts": "ПРАЦЮЄМО У ПАВЛОГРАДІ БІЛЬШ 20 РОКІВ"
+    "hero-title-contacts": "ПРАЦЮЄМО У ПАВЛОГРАДІ БІЛЬШ 20 РОКІВ",
+    "hero-title-condi": "РЕМОНТ, ЗАПРАВКА ТА ОБСЛУГОВУВАННЯ КОНДИЦІОНЕРІВ",
+    "hero-content-condi1": "Комплексна діагностика.",
+    "hero-content-condi2": "Заправка автомобільного кондиціонера.",
+    "hero-content-condi3": "Заміна компресора кондиціонера.",
+    "condi-section-title": "Ремонт і заправка автомобільних кондиціонерів у Павлограді",
+    "condi-span1": "Повернемо холод у ваш автомобіль! У СТО «КАСКАД»",
+    "condi-span2": "проводимо повну діагностику, ремонт і заправку систем кондиціонування будь-якої складності. Використовуємо професійне обладнання та якісні хладагенти, щоб забезпечити ефективну роботу автомобільного кондиціонера навіть у найспекотнішу погоду.",
+    "condi-title-price": "Прайс-лист на послуги з автокондиціонерів у Павлограді:",
+    "diagnostics-section-title": "Професійна діагностика автомобілів",
+    "hero-title-diagnostics": "Комп'ютерна діагностика автомобіля",
+    "hero-content-diagnostics1": "Комп'ютерна діагностика двигуна.",
+    "hero-content-diagnostics2": "Діагностика електронних систем.",
+    "hero-content-diagnostics3": "Діагностика АКПП.",
+    "diagnostics-span": "Виявимо приховані несправності до того, як вони перетворяться на серйозні поломки!",
+    "diagnostics-span2": "В автосервісі «Каскад» проводимо повну комп'ютерну діагностику всіх систем автомобіля з використанням професійного скануючого обладнання. Сучасна діагностика дозволяє точно визначити причини несправностей, заощаджуючи ваш час і гроші на ремонті.",
+    "diagnostics-list1": "Заміна моторного масла та фільтрів.",
+    "diagnostics-list2": "Перевірка та заміна технічних рідин.",
+    "diagnostics-list3": "Перевірка системи запалювання.",
+    "diagnostics-list4": "Огляд рульового управління.",
+    "diagnostics-list5": "Контроль стану ременів і ланцюгів ГРМ.",
+    "condi-list1": "Чистка та дезінфекція системи кондиціонування.",
+    "condi-list2": "Ремонт радіатора (конденсера) кондиціонера.",
+    "condi-list3": "Заміна ресивера-осушувача та розширювального клапана.",
+    "condi-list4": "Усунення витоків у магістралях.",
+    "condi-list5": "Заміна масла в КПП та редукторах.",
+    "hero-title-tehnical": "ТЕХНІЧНЕ ОБСЛУГОВУВАННЯ АВТОМОБІЛЯ",
+    "hero-content-tehnical1": "Діагностика ходової частини.",
+    "hero-content-tehnical2": "Перевірка гальмівної системи.",
+    "hero-content-tehnical3": "Діагностика електрообладнання.",
+    "tehnical-section-title": "Регламентне ТО автомобілів",
+    "tehnical-span": "Регулярне техобслуговування - запорука довгої та безпроблемної експлуатації вашого авто!",
+    "tehnical-span2": "У нашому автосервісі ми проводимо повне технічне обслуговування з використанням професійного обладнання та якісних матеріалів.",
+    "tehnical-list1": "Заміна моторного масла та фільтрів.",
+    "tehnical-list2": "Перевірка та заміна технічних рідин.",
+    "tehnical-list3": "Перевірка системи запалювання.",
+    "tehnical-list4": "Огляд рульового управління.",
+    "tehnical-list5": "Контроль стану ременів і ланцюгів ГРМ.",
+    "tehnical-price-title": "Прайс-лист на технічне обслуговування у Павлограді СТО «Каскад»:",
+    "hero-title-transmissiya": "РЕМОНТ ТРАНСМІСІЇ У ПАВЛОГРАДІ",
+    "hero-content-transmissiya1": "Діагностика трансмісії.",
+    "hero-content-transmissiya2": "Заміна зчеплення.",
+    "hero-content-transmissiya3": "Ремонт коробки передач.",
+    "transmissiya-section-title": "Ремонт трансмісії в автосервісі Павлограда",
+    "transmissiya-span": "Надійна трансмісія - запорука плавної та безпечної їзди! У СТО «Каскад»",
+    "transmissiya-span2": "виконуємо повну діагностику та ремонт трансмісії будь-якої складності. Ми використовуємо професійне обладнання та оригінальні запчастини, щоб повернути вашому авто впевненість на дорозі.",
+    "transmissiya-list1": "Заміна ШРУСів та пильників.",
+    "transmissiya-list2": "Ремонт роздавальної коробки та редукторів.",
+    "transmissiya-list3": "Ремонт супортів, заміна напрямних та поршнів.",
+    "transmissiya-list4": "Обслуговування карданного вала.",
+    "transmissiya-list5": "Заміна масла у КПП та редукторах.",
+    "transmissiya-price-title": "Прайс-лист на ремонт системи зчеплення у Павлограді СТО «Каскад»:",
+    "hero-title-tormoznaya": "РЕМОНТ ГАЛЬМІВНОЇ СИСТЕМИ",
+    "hero-content-tormoznaya1": "Перевірка та заміна ABS-датчиків.",
+    "hero-content-tormoznaya2": "Заміна гальмівних колодок та дисків.",
+    "hero-content-tormoznaya3": "Ремонт супортів та заміна циліндрів.",
+    "tormoznaya-section-title": "Гальмівна система у Павлограді",
+    "tormoznaya-span": "Ваша безпека на дорозі починається зі справної гальмівної системи! У нашому СТО «Каскад»",
+    "tormoznaya-span2": "ми проводимо повну діагностику та ремонт гальм будь-якої складності. Наші майстри використовують професійне обладнання та якісні запчастини, щоб забезпечити надійну роботу гальмівної системи вашого авто.",
+    "tormoznaya-list1": "Діагностика гальмівної системи.",
+    "tormoznaya-list2": "Заміна гальмівних колодок, дисків та барабанів.",
+    "tormoznaya-list3": "Ремонт супортів, заміна напрямних та поршнів.",
+    "tormoznaya-list4": "Прокачування гальмівної системи, заміна гальмівної рідини.",
+    "tormoznaya-list5": "Ремонт або заміна гальмівних циліндрів.",
+    "tormoznaya-title-price": "Прайс-лист на ремонт гальмівної системи у Павлограді СТО «Каскад»:",
+    "hero-title-electrika": "РЕМОНТ АВТОЕЛЕКТРИКИ В ПАВЛОГРАДІ",
+  "hero-content-electrika1": "Ремонт та заміна блоків управління.",
+  "hero-content-electrika2": "Діагностика генератора та стартера.",
+  "hero-content-electrika3": "Усунення проблем із проводкою.",
+  "electrika-section-title": "Діагностика та ремонт автоелектрики",
+  "electrika-span": "У нашому СТО «Каскад»",
+  "electrika-span2": "у Павлограді ви можете провести повну діагностику та ремонт автоелектрики будь-якої складності. Ми виконуємо пошук та усунення несправностей проводки, ремонт генераторів і стартерів, заміну та встановлення освітлення, а також будь-які електромонтажні роботи. Використовуємо лише якісні запчастини та професійне обладнання. Звертаючись до нас, ви отримуєте гарантію на всі види послуг і впевненість у надійній роботі електрики вашого авто.",
+  "electrika-list1": "Діагностика електропроводки та усунення замикань.",
+  "electrika-list2": "Ремонт та заміна генераторів і стартерів.",
+  "electrika-list3": "Пошук та усунення помилок блоків управління.",
+  "electrika-list4": "Встановлення та підключення фар, протитуманок, ДХО.",
+  "electrika-list5": "Перевірка та заміна акумуляторів і реле.",
+  "electrika-title-price": "Прайс-лист на ремонт автоелектрики в Павлограді СТО «Каскад»:",
+  "hero-title-hodovaya": "РЕМОНТ ХОДОВОЇ ЧАСТИНИ В ПАВЛОГРАДІ",
+  "hero-content-hodovaya1": "Діагностика та відновлення підвіски!",
+  "hero-content-hodovaya2": "Швидка заміна амортизаторів та важелів!",
+  "hero-content-hodovaya3": "Гарантія якості на всі роботи!",
+  "hodovaya-section-title": "Ремонт ходової частини в «АС КАСКАД»",
+  "hodovaya-span": "У нашому СТО «КАСКАД»",
+  "hodovaya-span2": "у Павлограді ви можете провести повну діагностику та ремонт ходової частини автомобіля. Ми виконуємо заміну амортизаторів, важелів, кульових опор, сайлентблоків, ступичних підшипників та інші роботи. Використовуємо лише якісні запчастини та професійне обладнання. Звертаючись до нас, ви отримуєте гарантію на всі види послуг і впевненість у безпеці свого авто.",
+  "hodovaya-list1": "Діагностика підвіски та виявлення несправностей.",
+  "hodovaya-list2": "Заміна амортизаторів та стійок стабілізатора.",
+  "hodovaya-list3": "Заміна важелів, кульових опор та втулок.",
+  "hodovaya-list4": "Заміна ступичних підшипників.",
+  "hodovaya-list5": "Перевірка та регулювання розвал-зходження.",
+  "hodovaya-title-price": "Прайс-лист на ремонт ходової частини в Павлограді СТО «Каскад»:",
+  "hero-title-dvigatel": "РЕМОНТ ДВИГУНА В ПАВЛОГРАДІ",
+  "hero-content-dvigatel1": "Діагностика, ремонт та обслуговування!",
+  "hero-content-dvigatel2": "Працюємо з будь-якими марками!",
+  "hero-content-dvigatel3": "Використовуємо якісні запчастини!",
+  "dvigatel-section-title": "Ремонт двигуна в «АС КАСКАД»",
+  "dvigatel-span": "У нашому СТО «КАСКАД»",
+  "dvigatel-span2": "ви можете провести повну діагностику та ремонт двигуна будь-якої складності. Ми виконуємо капітальний ремонт, заміну ГРМ, ремонт головки блоку циліндрів, заміну поршневих кілець, прокладок, маслознімних колпачків та інші роботи. Використовуємо лише якісні запчастини та професійне обладнання. Звертаючись до нас, ви отримуєте гарантію на всі види послуг і впевненість у надійній роботі двигуна вашого авто.",
+  "dvigatel-title-price": "Прайс-лист на ремонт двигуна в Павлограді СТО «Каскад»:",
+  "dvigatel-list1": "Перевірка помилок, компресії, стану циліндрів.",
+  "dvigatel-list2": "Заміна поршневої групи, вкладишів, прокладок.",
+  "dvigatel-list3": "Заміна масла у двигуні.",
+  "dvigatel-list4": "Чистка, заміна картриджа, відновлення.",
+  "dvigatel-list5": "Усунення перебоїв у роботі, покращення запуску."
   }
